get element/elements by ID or ClassName

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 </head>
 <body>
 
+<div id="first">
+
+<p class="text"></p>
+<p class="text"></p>
+<p class="text"></p>
+<p class="text"></p>
+
+</div>
 </body>
 <script src="script.js"></script>
 </html>
